--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: Thoughts
 email: me@cyriacthomas.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -22,3 +22,7 @@ hero_image: "https://www.gravatar.com/avatar/0ffdfa5b2f07204093bb08825f2ec9f1.pn
 # Build settings
 markdown: kramdown
 exclude: [vendor]
+gems: [jekyll-paginate]
+
+paginate: 5
+paginate_path: "/blog-page-:num/"
